--- a/learn-nodejs/nestjs-typeorm-mongodb/package.json
+++ b/learn-nodejs/nestjs-typeorm-mongodb/package.json
@@ -1,18 +1,14 @@
 {
   "name": "nestjs-typeorm-mongodb",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
-  "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "build": "bun -b nest build",
+    "format": "bun -b prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "bun -b nest start",
+    "start:dev": "bun -b nest start --watch",
+    "start:debug": "bun -b nest start --debug --watch",
+    "start:prod": "bun dist/main",
+    "lint": "bun -b eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
