--- a/learn-nodejs/nestjs-typeorm-mongodb/tsconfig.json
+++ b/learn-nodejs/nestjs-typeorm-mongodb/tsconfig.json
@@ -2,24 +2,30 @@
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "resolvePackageJsonExports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
+    "resolvePackageJsonExports": true,
+
+    "target": "ES2023",
+    "outDir": "./dist",
     "declaration": true,
+    "incremental": true,
     "removeComments": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "ES2023",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": true,
+
     "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "strictNullChecks": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["src/*"]
+    }
   }
 }
