nestjs-typeorm-mongodb: typeorm config (datasource for mongo)

--- a/learn-nodejs/nestjs-typeorm-mongodb/docker-compose.yaml
+++ b/learn-nodejs/nestjs-typeorm-mongodb/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: nestjs-typeorm-mongodb
 
 volumes:
   mongo:
