--- a/learn-nodejs/nx-typescript-lambda/package.json
+++ b/learn-nodejs/nx-typescript-lambda/package.json
@@ -9,13 +9,24 @@
   "dependencies": {},
   "devDependencies": {
     "@nx/js": "22.0.2",
+    "@nx/vite": "22.0.2",
+    "@nx/web": "22.0.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
+    "ajv": "^8.0.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "22.0.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^3.0.0"
   },
   "trustedDependencies": [
     "@swc/core",
