--- a/learn-nodejs/nx-typescript-lambda/packages/zoo/package.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/zoo/package.json
@@ -15,5 +15,7 @@
       "default": "./dist/index.js"
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "@nx-typescript-lambda/animal": "workspace:*"
+  }
 }
