--- a/learn-nodejs/nx-typescript-lambda/packages/zoo/tsconfig.lib.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/zoo/tsconfig.lib.json
@@ -10,7 +10,11 @@
     "types": ["node", "vite/client"]
   },
   "include": ["src/**/*.ts"],
-  "references": [],
+  "references": [
+    {
+      "path": "../animal/tsconfig.lib.json"
+    }
+  ],
   "exclude": [
     "vite.config.ts",
     "vite.config.mts",
