nx-typescript-lambda: refactor 'zoo' and 'animal' to use functions from 'util'

--- a/learn-nodejs/nx-typescript-lambda/packages/animal/tsconfig.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/animal/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/util"
+    },
+    {
       "path": "./tsconfig.lib.json"
     },
     {
