--- a/learn-nodejs/nx-typescript-lambda/packages/zoo/package.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/zoo/package.json
@@ -16,6 +16,7 @@
     }
   },
   "dependencies": {
-    "@nx-typescript-lambda/animal": "workspace:*"
+    "@nx-typescript-lambda/animal": "workspace:*",
+    "@nx-typescript-lambda/util": "workspace:*"
   }
 }
