--- a/learn-nodejs/nx-typescript-lambda/packages/zoo/tsconfig.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/zoo/tsconfig.json
@@ -4,6 +4,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/util"
+    },
+    {
       "path": "../animal"
     },
     {
