--- a/learn-nodejs/nx-typescript-lambda/packages/zoo/tsconfig.lib.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/zoo/tsconfig.lib.json
@@ -12,6 +12,9 @@
   "include": ["src/**/*.ts"],
   "references": [
     {
+      "path": "../../libs/util/tsconfig.lib.json"
+    },
+    {
       "path": "../animal/tsconfig.lib.json"
     }
   ],
