--- a/learn-nodejs/nx-typescript-lambda/nx.json
+++ b/learn-nodejs/nx-typescript-lambda/nx.json
@@ -9,9 +9,17 @@
       "default",
       "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
       "!{projectRoot}/tsconfig.spec.json",
-      "!{projectRoot}/src/test-setup.[jt]s"
+      "!{projectRoot}/src/test-setup.[jt]s",
+      "!{projectRoot}/jest.config.[jt]s",
+      "!{projectRoot}/test-setup.[jt]s"
     ],
-    "sharedGlobals": []
+    "sharedGlobals": [],
+    "stage": [
+      {
+        "env": "STAGE"
+      }
+    ],
+    "no-sls": ["!{projectRoot}/serverless.yml", "!{projectRoot}/**/sls.yml"]
   },
   "plugins": [
     {
@@ -46,6 +54,31 @@
   "targetDefaults": {
     "test": {
       "dependsOn": ["^build"]
+    },
+    "deploy": {
+      "inputs": ["production", "^production", "stage"],
+      "cache": true
+    },
+    "package": {
+      "inputs": ["production", "^production", "stage"],
+      "cache": true
+    },
+    "build": {
+      "inputs": ["production", "^production", "no-sls", "^no-sls"],
+      "cache": true
+    },
+    "@nx/jest:jest": {
+      "cache": true,
+      "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
+      "options": {
+        "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      }
     }
   }
 }
