--- a/learn-nodejs/nx-typescript-lambda/package.json
+++ b/learn-nodejs/nx-typescript-lambda/package.json
@@ -9,6 +9,8 @@
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
+    "@ns3/nx-serverless": "*",
+    "@nx/jest": "20.8.2",
     "@nx/js": "21.6.8",
     "@nx/vite": "21.6.8",
     "@nx/web": "21.6.8",
@@ -19,10 +21,15 @@
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "ajv": "^8.0.0",
+    "esbuild": "~0.19.9",
+    "jest": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.6.8",
     "prettier": "^2.6.2",
+    "serverless": "^3.38.0",
+    "serverless-esbuild": "^1.50.0",
+    "serverless-offline": "^13.3.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "vite": "^7.0.0",
