nx-typescript-lambda: 'sls' command at root workspace

--- a/learn-nodejs/nx-typescript-lambda/package.json
+++ b/learn-nodejs/nx-typescript-lambda/package.json
@@ -6,8 +6,15 @@
     "packages/*",
     "libs/*"
   ],
-  "scripts": {},
-  "dependencies": {},
+  "nx": {
+    "name": "source",
+    "targets": {
+      "sls": {
+        "executor": "@ns3/nx-serverless:sls",
+        "cache": false
+      }
+    }
+  },
   "devDependencies": {
     "@ns3/nx-serverless": "*",
     "@nx/jest": "20.8.2",
