--- a/learn-nodejs/nx-typescript-lambda/package.json
+++ b/learn-nodejs/nx-typescript-lambda/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nx-typescript-lambda/source",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "workspaces": [
     "packages/*",
@@ -16,7 +16,10 @@
     }
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@ns3/nx-serverless": "*",
+    "@nx/eslint": "20.8.2",
+    "@nx/eslint-plugin": "20.8.2",
     "@nx/jest": "20.8.2",
     "@nx/js": "21.6.8",
     "@nx/vite": "21.6.8",
@@ -29,6 +32,8 @@
     "@vitest/ui": "^3.0.0",
     "ajv": "^8.0.0",
     "esbuild": "~0.19.9",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
     "jest": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
@@ -39,6 +44,7 @@
     "serverless-offline": "^13.3.2",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
+    "typescript-eslint": "^8.19.0",
     "vite": "^7.0.0",
     "vite-plugin-dts": "~4.5.0",
     "vitest": "^3.0.0"
