--- a/learn-nodejs/nx-typescript-lambda/libs/util/package.json
+++ b/learn-nodejs/nx-typescript-lambda/libs/util/package.json
@@ -15,6 +15,9 @@
       "default": "./dist/index.js"
     }
   },
+  "nx": {
+    "name": "util"
+  },
   "dependencies": {
     "tslib": "^2.3.0"
   }
