--- a/learn-nodejs/nx-typescript-lambda/packages/animal/package.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/animal/package.json
@@ -15,6 +15,9 @@
       "default": "./dist/index.js"
     }
   },
+  "nx": {
+    "name": "animal"
+  },
   "dependencies": {
     "@nx-typescript-lambda/util": "workspace:*"
   }
