--- a/learn-nodejs/nx-typescript-lambda/packages/zoo/package.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/zoo/package.json
@@ -15,6 +15,9 @@
       "default": "./dist/index.js"
     }
   },
+  "nx": {
+    "name": "zoo"
+  },
   "dependencies": {
     "@nx-typescript-lambda/animal": "workspace:*",
     "@nx-typescript-lambda/util": "workspace:*"
