nx-typescript-lambda: annotate typescript function types

--- a/learn-nodejs/nx-typescript-lambda/packages/api/package.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/api/package.json
@@ -59,5 +59,8 @@
       }
     }
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.158"
+  }
 }
