--- a/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
+++ b/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
@@ -24,6 +24,7 @@ params:
 
 provider:
   name: aws
+  region: ap-southeast-1
   runtime: nodejs20.x
   stage: ${self:custom.stage}
   endpointType: REGIONAL
@@ -32,6 +33,24 @@ provider:
     APP_ENV: ${self:custom.stage}
     IS_PRODUCTION: ${param:production}
     NODE_OPTIONS: --enable-source-maps
+
+resources:
+  Resources:
+    CustomerTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:service}-customer-${sls:stage}
+        BillingMode: PAY_PER_REQUEST # on-demand capacity
+        AttributeDefinitions:
+          - AttributeName: ID
+            AttributeType: S # string
+          - AttributeName: Name
+            AttributeType: S # string
+        KeySchema:
+          - AttributeName: ID
+            KeyType: HASH # partition key
+          - AttributeName: Name
+            KeyType: RANGE # sort key
 
 functions:
   foo:
