nx-typescript-lambda: customer create lambda

--- a/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
+++ b/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
@@ -53,9 +53,9 @@ resources:
             KeyType: RANGE # sort key
 
 functions:
-  foo:
-    handler: src/handlers/foo.lambda
+  customer-create:
+    handler: src/handlers/customer/create.lambda
     events:
       - http:
-          method: GET
-          path: /foo
+          method: POST
+          path: /customer
