--- a/learn-nodejs/nx-typescript-lambda/packages/api/package.json
+++ b/learn-nodejs/nx-typescript-lambda/packages/api/package.json
@@ -59,7 +59,10 @@
       }
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.932.0",
+    "@aws-sdk/lib-dynamodb": "^3.932.0"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.158"
   }
