--- a/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
+++ b/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
@@ -33,6 +33,7 @@ provider:
     APP_ENV: ${self:custom.stage}
     IS_PRODUCTION: ${param:production}
     NODE_OPTIONS: --enable-source-maps
+    DYNAMODB_CUSTOMER_TABLE: ${self:service}-customer-${sls:stage}
 
 resources:
   Resources:
