--- a/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
+++ b/learn-nodejs/nx-typescript-lambda/packages/api/serverless.yml
@@ -34,6 +34,14 @@ provider:
     IS_PRODUCTION: ${param:production}
     NODE_OPTIONS: --enable-source-maps
     DYNAMODB_CUSTOMER_TABLE: ${self:service}-customer-${sls:stage}
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:PutItem
+          Resource:
+            - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/${self:service}-customer-${sls:stage}
 
 resources:
   Resources:
